--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,20 +7,9 @@ edition = "2021"
 rand = "0.8"
 rand_mt = "4.2"
 rayon = "1.7"
-plotters = "0.3"
+toml = "0.9.8"
+serde = { version = "1.0.228", features = ["derive"] }
 
 [[bin]]
 name = "debordo"
 path = "src/main.rs"
-
-[[bin]]
-name = "debug"
-path = "src/debug.rs"
-
-[[bin]]
-name = "detailed_debug"
-path = "src/detailed_debug.rs"
-
-[[bin]]
-name = "simulate_debug"
-path = "src/simulate_debug.rs"
