--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -24,5 +24,5 @@
   "remoteEnv": {
     "PATH": "${containerEnv:PATH}:/mnt/mise-data/shims"
   },
-  "postCreateCommand": "sudo chown -R vscode:vscode /mnt/mise-data;mise i;chmod -R u+x tasks/"
+  "postCreateCommand": "sudo chown -R vscode:vscode /mnt/mise-data;mise i"
 }
